--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
   </body>
   <script>
+
+    // require('electron').shell.openExternal('https://github.com')
     location.href = 'https://c9.io'
   </script>
 </html>
